Correction warning align-item: flex-end

--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -10,7 +10,7 @@
 }
 .list {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     position: relative;
 }
 .img {
